fixed anchor tag white space

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ footer {
 
 main {
   text-align: center;
-  min-height: calc(100vh - 200.6px);
+  min-height: calc(100vh - 190.6px);
   padding-bottom: -90.8px;
 }
 
